<resources>

    <string name="app_name">BrewLikes</string>

    <!--Ranking-->
    <string name="pricerating">Price</string>
    <string name="tasterating">Taste</string>
    <string name="rankingComment">Comment the beer</string>
    <string name="rankBeer">Rank the beer</string>
    <string name="tasteAwful">Awful</string>
    <string name="tastePerfect">Perfect</string>
    <string name="priceExpensive">Expensive</string>
    <string name="priceCheap">Cheap</string>
    <string name="beerName">Name of the beer</string>
    <string name="category">Category</string>
    <string name="imageEdit">Edit</string>
    <string name="beerCategory">Category</string>
    <string name="saveBeer">Save</string>
    <string name="discardBeer">Discard</string>
    <string name="lastChange">Last chance to change</string>
    <string name="saveToUnknown">Are you sure you want the category Unknown?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nameTheBeer">You need to name the beer</string>
    <string name="commentTheBeer">You need to comment the beer</string>
    <string name="pictureTheBeer">You need to take a picture of your beer</string>
    <!--End of ranking-->

    <!-- InfoActivity & BottomNavigation-->
    <string name="taste">Taste:</string>
    <string name="price">Price:</string>
    <string name="rate">Rate:</string>
    <string name="home">Home</string>
    <string name="topList">Top List</string>
    <string name="mapView">Map View</string>
    <string name="editBeerName">Edit Beer Name</string>
    <string name="edit">Edit Comment</string>
    <string name="delete">Delete Beer</string>
    <string name="deleting">Are you sure you want to delete this beer?</string>
    <!-- end of InfoActivity & BottomNavigation -->
    
    <!-- Facebook -->
    <string name="brewlikes_fid" translatable="false">311762962671719</string>
    <string name="content_provider" translatable="false">com.facebook.app.FacebookContentProvider311762962671719</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted</string>
    <!-- End of Facebook -->

    <!--About-->
    <string name="aboutTextView">This is an app for rating your favourite beers! So go out, have a beer, take a pic, rate it and drink responsibly.</string>
    <string name="infoEmma">An ice-cold Ringnes at Rock In never disapoints me!</string>
    <string name="infoMani">Honey beer from Åland is my favourite beer.</string>
    <string name="infoMilja">I don\'t drink beer but I like apps (especially our app).</string>
    <string name="infoMoa">I want a great pale lager during a sweaty concert!!</string>
    <string name="infoPatrik">If I don\'t get my Lapin Kulta I\'m going home.</string>
    <string name="infoVictor">I\'d love a cold Chang on a beach.</string>
    <string name="infoVictoria">Any beer after a long day would suit me fine.</string>

    <string-array name="persons">
        <item>Emma</item>
        <item>Mani</item>
        <item>Milja</item>
        <item>Moa</item>
        <item>Pekka</item>
        <item>Victor</item>
        <item>Victoria</item>
    </string-array>

    <string-array name="descriptions">
        <item>@string/infoEmma</item>
        <item>@string/infoMani</item>
        <item>@string/infoMilja</item>
        <item>@string/infoMoa</item>
        <item>@string/infoPatrik</item>
        <item>@string/infoVictor</item>
        <item>@string/infoVictoria</item>
    </string-array>
    <!--End of About-->

    <string name="ItemTitleAbout" translatable="false">item title about</string>
    <string name="ItemTitleCamera" translatable="false">item title camera</string>

    <!--Top List Activity-->
    <string name="myFavouriteBeer">My favourite beers</string>
    <string name="beerPic">Picture for beer</string>
    <!--End of Top List Activity-->

    <!--Map-->
    <string name="searchTextView">Search address here</string>
    <string name="checkin_text">CHECK IN</string>
    <string name="Google_Maps_API_key" translatable="false">AIzaSyAWaHVKauVexNLQ1m02LC5iNGX5UwLqFTU</string>
    <string name="noCheckedInBeers">You haven\'t checked in any beers yet</string>
    <string name="addressInSnippet">Address: </string>
    <string name="websiteInSnippet">Website: </string>
    <string name="telInSnippet">Phone number: </string>
    <string name="permissionsFailed">"You need to give permission to use the check in function"</string>
    <string name="locationFailed">"Couldn't get device location"</string>
    <!--End of map-->

    <!--Take photo-text-->
    <string name="timeToBrew">Time to brew…</string>
    <string name="chooseAlternative">Please choose an alternative</string>
    <string name="cancel">Cancel</string>
    <string name="takePhoto">Take photo</string>
    <!--End of Take photo-text-->

    <!--Category view-->
    <string name="addCategory">Add category</string>
    <string name="saveCategory">Save category</string>
    <string name="deleteCategory">Delete category</string>
    <string name="categoryAdded">Added category </string>
    <string name="giveCategoryName">Please give a category name</string>
    <string name="categoryNotFound">No such category</string>
    <string name="categoryNotEmpty">Cannot delete category with beers</string>
    <string name="categoryDeleteSuccessfull">Deleted category </string>
    <!--End of category view-->

    <!--credits-->
    <string name="credits">Credits \n\nThis android project was started at ITHS Gothenburg
        as a part of our Java-course. The seven of us gather
        our biggest interest in one app and the result is amazing.\n\n
        Hope you like it as much as we liked building it.\n\n\n

        - ittianyu for BottomNavigation\n
        - http://developers.facebook.com\n
        - Martin Blomberg for awesome consulting\n
        - http://www.freesfx.co.uk/ for sound file!\n
        - Google inc. for PlaceAutocompleteAdapter\n
        - IT-Högskolan Göteborg

    </string>
    <string name="videolink">BREWLIKES</string>


</resources>
