<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blackbrew"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- toolbar -->

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blackbrew">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarTop"
        app:layout_constraintStart_toStartOf="@+id/toolbarTop"
        app:layout_constraintTop_toTopOf="@+id/toolbarTop"
        app:srcCompat="@drawable/brewlikes_placeholder_logo2" />

    <!-- title menu -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/titleMenu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="56dp"
        android:background="@color/beer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBeerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/beerName"
            android:textAllCaps="true"
            android:textColor="@color/blackbrew"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/ivNavBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:onClick="onNavBackClick"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toTopOf="@id/titleMenu"
        app:layout_constraintEnd_toEndOf="@id/titleMenu"/>

    <!-- middle section -->

    <ImageView
        android:id="@+id/ivBeer"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu"
        app:srcCompat="@android:drawable/btn_star_big_off"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategory"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu" />

    <TextView
        android:id="@+id/tvPriceScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="8.0"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu" />

    <TextView
        android:id="@+id/tvTaste"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/taste"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvTasteScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="7.0"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceScore" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif"
        android:text="@string/rate"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/tvTaste" />

    <TextView
        android:id="@+id/tvRateScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="7.5/10.0"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTasteScore" />

    <!-- This is where the fb share button gets put in -->

    <LinearLayout
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvInfo"
        app:layout_constraintStart_toEndOf="@+id/ivBeer">

    </LinearLayout>

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/category"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:background="@color/beer"
        android:textColor="@color/blackbrew"
        android:textStyle="bold"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivBeer"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/ivBeer"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:textAllCaps="true"
        android:text=""
        android:textSize="16dp"
        android:background="@drawable/beer_comment"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onLocationClick"
        android:src="@drawable/ic_mapview_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo">

    </ImageView>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo">

    </TextView>

    <!-- bottom navigation -->

    <include layout="@layout/bottom_navigation"/>

</android.support.constraint.ConstraintLayout>