<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- toolbar -->

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkGrey">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarTop"
        app:layout_constraintStart_toStartOf="@+id/toolbarTop"
        app:layout_constraintTop_toTopOf="@+id/toolbarTop"
        app:srcCompat="@drawable/brewlikes_placeholder_logo2" />

    <!-- title menu -->

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@color/beer"
        android:id="@+id/titleMenu"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toEndOf="@id/tvInfo"
        android:onClick="onDeleteClick"
        android:src="@drawable/ic_delete"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu"
        app:layout_constraintTop_toTopOf="@+id/titleMenu" />

    <TextView
        android:id="@+id/tvBeerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="sans-serif"
        android:text="@string/beerName"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivNavBack"
        app:layout_constraintTop_toTopOf="@id/titleMenu" />

    <ImageView
        android:id="@+id/ivNavBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:onClick="onNavBackClick"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toTopOf="@id/titleMenu"
        app:layout_constraintStart_toStartOf="@id/titleMenu"/>


    <!-- middle section -->

    <ImageView
        android:id="@+id/ivBeer"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/beerCategory"
        android:textColor="@color/beer"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategory"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:fontFamily="sans-serif"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu" />

    <TextView
        android:id="@+id/tvPriceScore"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="46dp"
        android:fontFamily="sans-serif"
        android:text="8.0"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu" />

    <TextView
        android:id="@+id/tvTaste"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/taste"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/tvTasteScore"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="7.0"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvTaste"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceScore" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/rate"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivBeer"
        app:layout_constraintTop_toBottomOf="@+id/tvTaste" />

    <TextView
        android:id="@+id/tvRateScore"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="7.5/10.0"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvRate"
        app:layout_constraintTop_toBottomOf="@+id/tvTasteScore" />

    <!-- This is where the fb share button gets put in -->
    <LinearLayout
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toTopOf="@+id/tvInfo"
        app:layout_constraintStart_toEndOf="@+id/ivBeer">

    </LinearLayout>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@+id/ivBeer"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textAllCaps="true"
        android:text="Man kan ju fylla på i en evighet. Hej jag heter Emma och jag gillar öl! En lättsam sötma av karamell stöder snyggt upp fina rostade toner med kaffe och choklad plus aningens sötlakrits endast en gnutta röda bär"
        android:textSize="16dp"
        android:padding="4dp"
        android:background="@drawable/beer_comment"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBeer" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toEndOf="@id/tvInfo"
        android:onClick="onEditClick"
        android:src="@drawable/ic_edit"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintStart_toEndOf="@+id/tvInfo"
        app:layout_constraintBottom_toTopOf="@+id/tvLocation" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onLocationClick"
        android:src="@drawable/ic_mapview_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo">

    </ImageView>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:text="The Abyss, Göteborg"
        app:layout_constraintStart_toEndOf="@+id/ivLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo">

    </TextView>

    <!-- bottom navigation -->

    <include layout="@layout/bottom_navigation"/>

</android.support.constraint.ConstraintLayout>